<resources>
    <string name="app_name">Qlinikku</string>
    <string name="login_title">Selamat Datang di\nQlinikku!</string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="button_login">MASUK</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar</string>
    <string name="register_title">Buat Akun di Qlinikku</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tgllahir">Tanggal Lahir</string>
    <string name="button_register">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_disini">Masuk</string>
    <string name="nik">NIK</string>
    <string name="alamat">Alamat</string>
    <string name="noHp">Nomor HP</string>
    <string name="nama_home">Whisnu Yudha Saputra</string>
    <string name="halo_home">Halo</string>
    <string-array name="spinner_jk">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="title_activity_pasien_home2">PasienHome2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_logout">Logout</string>
    <string name="EditProfile">Edit Profile</string>

    <string-array name="SelectSpesialis">
        <item>Umum</item>
        <item>Penyakit Dalam</item>
        <item>Saraf</item>
        <item>Kandungan</item>
        <item>Kulit dan Kelamin</item>
        <item>THT</item>
        <item>Mata</item>
    </string-array>
</resources>