<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPasien">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="204dp"
                android:layout_height="195dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/image_register"/>

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textSize="20sp"
                android:textColor="#2b2b2b"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etNamaLengkap"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:hint="@string/nama_lengkap"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:id="@+id/etNIK"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:maxLength="16"
                android:hint="@string/nik"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"/>

            <LinearLayout
                android:id="@+id/layoutBirthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/etNIK"
                >

                <EditText
                    android:id="@+id/etBirthdate"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/tgllahir"
                    android:inputType="text"
                    android:enabled="false"
                    android:background="@drawable/rounded_disablededittext"/>

                <Button
                    android:id="@+id/btnPickDate"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_calendar"
                    android:backgroundTint="#0069E9"
                    />
            </LinearLayout>

            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/rounded_spinner"
                android:spinnerMode="dropdown"
                android:entries="@array/spinner_jk"
                android:id="@+id/spinnerJK"/>

            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/alamat"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:id="@+id/etNoHP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/noHp"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"/>
            />

            <Button
                android:id="@+id/btnRegisterSubmit"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:onClick="onClick_Register"
                android:text="@string/button_register"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:backgroundTint="#006EE9"
                android:elevation="0dp"
                />

            <ProgressBar
                android:id="@+id/progressbar2"
                android:layout_marginTop="20dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/Widget.AppCompat.ProgressBar"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                >
                <TextView
                    android:id="@+id/txtBelumPunyaAkun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah_punya_akun"
                    android:textSize="14sp"
                    android:textColor="#2b2b2b"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_disini"
                    android:textColor="#006EE9"
                    android:textSize="14sp"
                    android:onClick="onClickToLogin"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>






</RelativeLayout>
