<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    
    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="204dp"
        android:layout_height="195dp"
        android:layout_marginTop="62dp"
        android:src="@drawable/image_login"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textColor="#2b2b2b"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/imageLogin"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"/>
        />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:layout_below="@+id/etLoginEmail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"/>
        />

    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/etLoginPassword"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/button_login"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:backgroundTint="#006EE9"
        android:elevation="0dp"
        />

        <ProgressBar
            android:id="@+id/progressbar1"
            android:layout_below="@+id/btnLoginSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/Widget.AppCompat.ProgressBar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/progressbar1"
        >
        <TextView
            android:id="@+id/txtBelumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="14sp"
            android:textColor="#2b2b2b"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/clickToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_disini"
            android:textColor="#006EE9"
            android:clickable="true"
            android:textSize="14sp"
            android:onClick="onClickToRegister"/>

    </LinearLayout>



    
</RelativeLayout>
